# qml-project-

./: Bagle.qml  CMakeLists.txt  DoneScreen.qml  Main.qml  README.md  Spread.qml  SpreadingScreen.qml  ToastBagle.qml  ToastingScreen.qml  lockscreen.qml  main.cpp  maintainanceScreen.qml  mscreen1.qml  mscreen2.qml  mscreen3.qml  qml.qrc  sht45sensor.cpp  sht45sensor.h
qml/: Bagle.qml  Main.qml  Spread.qml  SpreadingScreen.qml  ToastingScreen.qml  maintainanceScreen.qml  mscreen1.qml  mscreen3.qml  testSensor.qml
